# lunar_outpost_simulation

./: .gitattributes  .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Oculus.Platform.Editor.csproj  Oculus.Platform.csproj  Oculus.VR.Editor.csproj  Oculus.VR.Scripts.Editor.csproj  Oculus.VR.csproj  README.md  Telerobotics HDRP VR Sandbox.sln  axle.urdf
Assets/armstrong_description/: CMakeLists.txt  README.md  armstrong.urdf.xacro  package.xml
Assets/armstrong_description/Materials/: Default.mat
Assets/armstrong_description/launch/: description.launch  rviz_urdf.launch
Assets/armstrong_description/meshes/: caster_arm.dae  caster_arm_1.asset  caster_arm_10.asset  caster_arm_11.asset  caster_arm_12.asset  caster_arm_13.asset  caster_arm_14.asset  caster_arm_15.asset  caster_arm_16.asset  caster_arm_17.asset  caster_arm_18.asset  caster_arm_19.asset  caster_arm_2.asset  caster_arm_20.asset  caster_arm_3.asset  caster_arm_4.asset  caster_arm_5.asset  caster_arm_6.asset  caster_arm_7.asset  caster_arm_8.asset  caster_arm_9.asset  caster_wheels.dae  caster_wheels_1.asset  caster_wheels_2.asset  frame.dae  frame_1.asset  frame_10.asset  frame_100.asset  frame_1000.asset  frame_1001.asset  frame_1002.asset  frame_1003.asset  frame_1004.asset  frame_1005.asset  frame_1006.asset  frame_1007.asset  frame_1008.asset  frame_1009.asset  frame_101.asset  frame_1010.asset  (+1710 more)
Assets/armstrong_description/meshes/materials/: Black Plastic.mat  CU Logo Material.mat  Clear Plastic.mat  Clear Red Plastic.002.mat  (+16 more)
Assets/armstrong_description/rviz/: urdf.rviz
(+493 files in other folders)
